darshika last layer

--- a/api-reference/data-types/string.mdx
+++ b/api-reference/data-types/string.mdx
@@ -1,9 +1,9 @@
 ---
-title: 'String Data Type'
+title: 'Text Data Type'
 description: 'Working with string data in WaveAssist'
 ---
 
-# String Data Type
+# Text Data Type
 
 Learn how to work with string data in WaveAssist.
 
