--- a/api-reference/sdk/environment-management.mdx
+++ b/api-reference/sdk/environment-management.mdx
@@ -3,9 +3,7 @@ title: 'Environment Management'
 description: 'How to manage environments in the WaveAssist SDK'
 ---
 
-# Environment Management
-
-Learn how to work with different environments in your WaveAssist projects.
+Learn how to work with different **environments** in your WaveAssist projects.
 
 ## Understanding Environments
 
