--- a/introduction.mdx
+++ b/introduction.mdx
@@ -17,27 +17,33 @@ WaveAssist helps you create, run, and automate Python-based workflows — whethe
 ### Core Concepts
 
 <CardGroup cols={2}>
-  <Card title="Nodes" icon="diagram-project">
+  <Card title="Nodes" icon="diagram-project" href="./core-concepts/nodes">
     Python scripts that represent tasks (like “generate fortune” or “send email”)
   </Card>
-  <Card title="Workflows" icon="arrows-split">
-    Link nodes together to run in sequence or in parallel
+  <Card title="Data" icon="database" href="./core-concepts/data">
+    Manage variables and data securely across workflows
   </Card>
-  <Card title="Variables" icon="code">
-    Store credentials or inputs securely across workflows
+  <Card title="Packages" icon="box" href="./core-concepts/packages">
+    Add and manage dependencies for your workflows
   </Card>
-  <Card title="Triggers" icon="clock">
-    Schedule or automatically run workflows based on events
+  <Card title="Environments" icon="cubes" href="./core-concepts/environments">
+    Configure and manage different runtime environments
+  </Card>
+  <Card title="Deployments" icon="cloud" href="./core-concepts/deployments">
+    Run and monitor workflows in live environments
+  </Card>
+  <Card title="Logs" icon="file-lines" href="./core-concepts/logs">
+    Debug and monitor workflows with detailed execution logs
   </Card>
 </CardGroup>
 
 ---
 
-## 💡 Benefits for Developers and Teams
+## Benefits for Developers and Teams
 
 WaveAssist is built for modern builders who want to automate workflows without worrying about infrastructure.
 
-### 🔧 For Developers:
+### For Developers:
 - Write simple Python functions as modular nodes
 - Easily connect logic in sequence or parallel
 - Test and debug directly from the dashboard
@@ -58,7 +64,7 @@ Whether you're a solo hacker or an engineering team — WaveAssist adapts to you
 Here's a basic overview of how WaveAssist runs your workflow:
 
 <Frame caption="Basic Workflow Diagram (Conceptual)">
-  <img src="/images/basic_workflow_diagram.png" alt="Workflow diagram" />
+  <img src="/images/how_it_works_WaveAssist.png" alt="Workflow diagram" />
 </Frame>
 
 This modular design lets you build simple scripts or complex systems — all in the same tool.
