--- a/core-concepts/environments.mdx
+++ b/core-concepts/environments.mdx
@@ -1,94 +1,12 @@
 ---
-title: 'Environments'
-description: 'Managing different environments in WaveAssist'
+title: "Environments"
+description: "Learn about managing environments in WaveAssist."
 ---
 
-# Environment Management
 
-WaveAssist supports multiple environments to help you build, test, and run your workflows in isolated, context-specific setups.
+**Environments** allow you to manage different configurations for your projects, such as development, staging, and production.
 
-Environments let you:
-- Reuse the same **project code, nodes, and structure**
-- Swap out **credentials, API keys, or user-specific settings**
-- Separate **development**, **staging**, and **production** configurations
-
----
-
-## Common Environment Types
-
-<CardGroup>
-  <Card title="Development" icon="code">
-    For experimenting and debugging workflows
-  </Card>
-  <Card title="Staging" icon="flask">
-    For testing workflows before going live
-  </Card>
-  <Card title="Production" icon="rocket">
-    For executing workflows in real-world use
-  </Card>
-  <Card title="Custom" icon="gear">
-    For client-specific or account-based contexts
-  </Card>
-</CardGroup>
-
----
-
-## Real-World Example
-
-Imagine you have a project that uses OpenAI to generate content. You want:
-
-- In **Dev**, to use a test OpenAI key under your account
-- In **Prod**, to use a client’s OpenAI key under a different account
-
-You don’t want to modify your project code or node logic — just swap the environment.
-
----
-
-## How It Works
-
-Each environment in WaveAssist:
-- Shares the **same project code and nodes**
-- Has its own set of **environment variables** (like `OPENAI_API_KEY`, `SLACK_WEBHOOK_URL`, etc.)
-- Can be selected when running workflows manually or via triggers
-
----
-
-## Using Environments in Code
-
-```python
-from waveassist import WAHelper
-
-# Initialize with environment
-helper = WAHelper(
-    project_key='your-project-key',
-    environment='production'  # or 'development', 'staging', etc.
-)
-
-# Fetch API key based on current environment
-openai_key = helper.fetch_data("OPENAI_API_KEY")
-```
-
-This lets you deploy the same codebase in multiple contexts without changing a single line of logic.
-
----
-
-## Variable Management
-
-To assign environment-specific values:
-
-1. Go to the **Variables** tab
-2. Add a variable (e.g., `OPENAI_API_KEY`)
-3. Assign different values for each environment (Dev, Staging, Prod)
-
----
-
-## Best Practices
-
-- Keep variable names consistent across environments
-- Avoid hardcoding secrets in your nodes
-- Use environment-specific logging if needed (e.g., log to different files)
-
----
-
-WaveAssist environments make it easy to scale your workflows from solo dev testing to enterprise-ready automation — securely and safely.
-
+### Key Features
+- **Create Environments**: Add new environments.
+- **Edit Environments**: Update existing environments.
+- **Delete Environments**: Remove environments that are no longer needed.
