--- a/core-concepts/nodes.mdx
+++ b/core-concepts/nodes.mdx
@@ -1,69 +1,62 @@
 ---
-title: 'Nodes'
-description: 'Understanding WaveAssist nodes and their capabilities'
+title: "Nodes"
+description: "Learn about managing nodes in WaveAssist."
 ---
 
-## What are Nodes?
+**Nodes** are the building blocks of your workflows in WaveAssist. You can create, update, and manage nodes directly from the dashboard. Each node can be scheduled to run at specific intervals or triggered manually.
 
-Nodes are the fundamental building blocks of WaveAssist workflows. Each node represents a specific task or operation in your AI workflow.
+## Key Features
+- **Create Nodes**: Add new nodes to your project.
+- **Edit Nodes**: Modify existing nodes.
+- **Delete Nodes**: Remove nodes that are no longer needed.
+- **View Code**: Inspect the code associated with a node.
+- **Enable/Disable Nodes**: Toggle the status of a node to enable or disable its execution.
 
-### Node Types
+## Enabling and Disabling Nodes
 
-<CardGroup>
-  <Card title="Processing Nodes" icon="gear">
-    Transform and process data using custom Python code
-  </Card>
-  <Card title="API Nodes" icon="globe">
-    Interact with external services and APIs
-  </Card>
-  <Card title="ML Nodes" icon="brain">
-    Execute machine learning models and AI tasks
-  </Card>
-  <Card title="Data Nodes" icon="database">
-    Handle data input/output operations
-  </Card>
-</CardGroup>
+Each node can be enabled or disabled based on your workflow requirements:
+- **Enabled**: The node is active and will execute based on its schedule or when triggered manually.
+- **Disabled**: The node is inactive and will not execute, even if triggered manually or scheduled.
 
-## Node Configuration
+You can toggle the status of a node using the **Status** dropdown in the node editor.
 
-```json
-{
-  "name": "DataProcessor",
-  "type": "processing",
-  "inputs": ["raw_data"],
-  "outputs": ["processed_data"],
-  "schedule": "0 */12 * * *",
-  "environment": "production",
-  "resources": {
-    "memory": "2Gi",
-    "cpu": "1"
-  }
-}
+## Starting Node
+
+The **Starting Node** option allows you to designate a node as the entry point for your workflow. When a workflow is triggered, execution begins from the starting node and proceeds through the defined sequence of nodes.
+
+- Only one node can be marked as the starting node in a workflow.
+- If no starting node is defined, the workflow will not execute automatically.
+
+## Scheduling Nodes
+
+Nodes can be scheduled to run at specific intervals or based on a cron expression. WaveAssist supports two scheduling types:
+
+### Interval Scheduling
+- Run the node at fixed intervals, such as every 12 hours or every 2 days.
+- This is useful for periodic tasks that need to execute regularly.
+
+### Cron Job Scheduling
+- Use cron expressions to define complex schedules with precision.
+- Cron jobs allow you to specify the exact minute, hour, day, month, and day of the week for execution.
+
+#### Example Cron Expression
+The following example runs the node at 9:35 AM, 11:35 AM, and 1:35 PM on weekdays (Monday to Friday) in the `Asia/Kolkata` timezone:
+```
+Minute: 35
+Hour: 9,11,13
+Day of Month: *
+Month of Year: *
+Day of Week: 1-5
+Timezone: Asia/Kolkata
 ```
 
-## Node Development
+### How to Configure Scheduling
+1. Open the **Edit Node** dialog.
+2. Select the **Schedule Type**:
+   - Choose **Interval** for fixed intervals.
+   - Choose **Cron** for custom schedules.
+3. If using **Cron**, fill in the fields for minute, hour, day, month, and day of the week.
+4. Select the appropriate timezone.
+5. Save your changes.
 
-```python
-from waveassist import WAHelper, NodeType
-
-# Initialize helper
-helper = WAHelper('your-project-key')
-
-# Create a processing node
-@helper.node(type=NodeType.PROCESSOR)
-def process_data(input_data):
-    # Your processing logic here
-    processed_data = transform(input_data)
-    return processed_data
-
-# Schedule the node
-helper.schedule_node('process_data', interval='12h')
-```
-
-## Best Practices
-
-1. **Single Responsibility**: Each node should perform one specific task
-2. **Input Validation**: Always validate input data before processing
-3. **Error Handling**: Implement proper error handling and logging
-4. **Resource Management**: Configure appropriate resource limits
-5. **Testing**: Test nodes thoroughly before deployment
+By combining scheduling options with the ability to enable/disable nodes, you can create highly flexible and efficient workflows in WaveAssist.
