--- a/introduction.mdx
+++ b/introduction.mdx
@@ -10,7 +10,7 @@ WaveAssist helps you create, run, and automate Python-based workflows — whethe
 ### What Can You Build?
 
 - Automate daily tasks like sending emails or reports
-- Build bots that connect to GitHub, Notion, Slack or more
+- Build bots that connect to GitHub, Notion or Slack
 - Use AI to summarize, generate, or process content
 - Run periodic background logic with zero infra hassle
 
